--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+
+	<article>
+		<p>loremEpsumloremEpsumloremEpsumloremEpsumloremEpsumloremEpsum</p>
+		<p>loremEpsuloremEpsumloremEpsumloremEpsumloremEpsumm</p>
+		<p>loremEpsumloremEpsumloremEpsumloremEpsumloremEpsum</p>
+	</article>
+
+	<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
